--- a/public/style.css
+++ b/public/style.css
@@ -41,3 +41,9 @@ canvas {
   border-radius: 30%;
   background-color: rgb(11, 202, 235);
 }
+
+@media (max-width: 992px) {
+  .noverenmovil {
+    display: none;
+  }
+}
